hphp/test/zend/good/ext/standard/tests/array/bug43505.php.skipif
<?php if (!extension_loaded('spl')) die("skip SPL is not available"); ?>