hphp/test/zend/bad/ext/phar/tests/phar_oo_nosig.php.skipif
<?php if (!extension_loaded("phar")) die("skip"); ?>
<?php if (!extension_loaded("spl")) die("skip SPL not available"); ?>